--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Admin.all_location.AllLocationsFragment"
+            android:name=".admin.all_location.AllLocationsFragment"
             android:windowSoftInputMode="adjustPan">
 
         </activity>
