--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,18 +28,13 @@
 
         <meta-data android:name="com.google.ar.core" android:value="required" />
         <activity
-            android:name="com.example.com.arnavigationapp.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.example.com.arnavigationapp.admin.all_location.AllLocationsFragment"
-            android:windowSoftInputMode="adjustPan">
-
         </activity>
     </application>
 
